# GLFW-CMake-starter

./: CMakeLists.txt  main.cpp
